Added responsive design for Cabin page

--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -37,3 +37,16 @@
   --rdp-background-color: theme('colors.accent.600') !important;
   margin: 0 !important;
 }
+
+@media (max-width: 768px) {
+  .rdp-months {
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .rdp-months > div {
+    margin: 0;
+    /* outline: 1px solid red; */
+    /* padding: 16px; */
+  }
+}
